--- a/src/components/Trending.css
+++ b/src/components/Trending.css
@@ -4,6 +4,7 @@
   padding-left: 30px;
   padding-right: 30px;
   padding-bottom: 26px;
+  z-index: -1;
 }
 
 .trending__content {
@@ -16,8 +17,8 @@
 .trending__wrap {
   padding-top: 56.25%;
   border-radius: 10px;
-  box-shadow: rgba(0 0 0 / 69%) 0px 26px 30px -10px,
-    rgb(0 0 0 / 73%) 0px 16px 10px -10px;
+  box-shadow: rgba(0 0 0 / 65%) 0px 26px 30px -15px,
+    rgb(0 0 0 / 70%) 0px 16px 10px -20px;
   cursor: pointer;
   overflow: hidden;
   position: relative;
@@ -41,13 +42,13 @@
 }
 
 .trending__wrap:hover {
-  box-shadow: rgb(0 0 0 / 80%) 0px 40px 58px -16px,
+  box-shadow: rgb(0 0 0 / 69%) 0px 40px 58px -16px,
     rgb(0 0 0 / 72%) 0px 30px 22px -10px;
   transform: scale(1.05);
   border-color: rgb(249, 249, 249, 0.8);
 }
 
-@media screen and (max-width: 1068px) {
+@media screen and (max-width: 8px) {
   .trending__content {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
