--- a/src/components/Book.css
+++ b/src/components/Book.css
@@ -14,17 +14,18 @@
   width: 50%;
   border-radius: 10px;
   transition: all 250ms ease-in-out 0s;
-
   box-shadow: 0 2rem 5rem 0 rgba(0, 0, 0, 0.1);
 }
 
 .book__wrap > img {
   width: 150px;
   height: 200px;
+  border: 1px solid whitesmoke;
 }
 
 .book__wrapInfo {
-  padding: 0 60px;
+  padding: 0px 60px;
+  padding-top: 10px;
 }
 
 .book__wrapInfo > h4 {
@@ -35,4 +36,32 @@
 .book__wrapInfo > p {
   color: rgb(145, 122, 122);
   line-height: 1.5rem;
+}
+.book__publishDate {
+  overflow: hidden;
+}
+
+@media screen and (max-width: 768px) {
+  .book__wrapContent {
+    display: flex;
+    align-items: center;
+    border: 1px solid #eaecee;
+    padding: 20px;
+    width: 90%;
+    border-radius: 10px;
+    transition: all 250ms ease-in-out 0s;
+    box-shadow: 0 2rem 5rem 0 rgba(0, 0, 0, 0.1);
+    margin: 0px 20px;
+  }
+
+  .book__wrapInfo > h4 {
+    font-size: 20px;
+
+    margin-bottom: 40px;
+  }
+
+  .book__wrapInfo > p {
+    color: rgb(145, 122, 122);
+    line-height: 1.1rem;
+  }
 }
