--- a/src/components/Trending.css
+++ b/src/components/Trending.css
@@ -6,6 +6,10 @@
   padding-bottom: 26px;
   z-index: -1;
 }
+.trending > h4 {
+  font-size: 18px;
+  padding: 5px 0px;
+}
 
 .trending__content {
   display: grid;
@@ -24,32 +28,55 @@
   position: relative;
   transition: all 250ms cubic-bezier(0.25, 0.46, 0.45, 0.94) 0s;
   border: 3px solid rgb(249, 249, 249, 0.1);
+  /* display: flex;
+  justify-content: center; */
 }
 
 .trending__wrap > a > img {
-  /* inset: 0px; */
+  inset: 0px;
   display: block;
   height: 100%;
   object-fit: cover;
-  opacity: 1;
+  opacity: 0.75;
+
   position: absolute;
   transition: opacity 500ms ease-in-out 0s;
-  width: 50%;
+  width: 100%;
   margin-bottom: 20px;
-  padding: 10px;
   z-index: 1;
   top: 0;
 }
-
-.trending__wrap:hover {
+.trending .trending__wrap:hover {
   box-shadow: rgb(0 0 0 / 69%) 0px 40px 58px -16px,
     rgb(0 0 0 / 72%) 0px 30px 22px -10px;
   transform: scale(1.05);
   border-color: rgb(249, 249, 249, 0.8);
 }
+.trending__wrap > a > span {
+  display: flex;
+  position: absolute;
+  left: 60px;
+  bottom: 60px;
+  /* justify-content: center;
+  align-items: center; */
+  z-index: 10;
+  font-size: 30px;
+}
 
-@media screen and (max-width: 8px) {
+@media screen and (max-width: 1068px) {
   .trending__content {
+    display: grid;
+    grid-gap: 20px;
+    gap: 20px;
     grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .trending__wrap > a > span {
+    display: flex;
+    position: absolute;
+    bottom: 40px;
+    z-index: 10;
+    justify-content: center;
+    font-size: 22px;
   }
 }
